objects/LogEvent__c.object
<CustomObject>
    <fields>
        <fullName>Log_Data__c</fullName>
        <label>Log Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quiddity__c</fullName>
        <label>Quiddity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Event</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>